# compilerCPP

./: .output.txt  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ast.h  ast_printer.cpp  ast_printer.h  cmake_install.cmake  codegen.cpp  codegen.h  codegen.vcxproj  codegen.vcxproj.filters  compiler.sln  compiler.vcxproj  compiler.vcxproj.filters  compiler_lib.vcxproj  compiler_lib.vcxproj.filters  compiler_tests.vcxproj  compiler_tests.vcxproj.filters  ir.h  ir.vcxproj  ir.vcxproj.filters  ir_printer.cpp  ir_printer.h  lex.vcxproj  lex.vcxproj.filters  lexer.cpp  lexer.h  lowering.cpp  lowering.h  (+7 more)
Testing/Temporary/: CTestCostData.txt
compiler_lib.dir/Debug/: compiler_lib.lib.recipe
compiler_lib.dir/Debug/compiler_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
compiler_tests.dir/Debug/: compiler_tests.exe.recipe
compiler_tests.dir/Debug/compiler_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib/Debug/: gtest_main.lib
test/: test  test.c  test.s
tests/: lexer_tests.cpp  parser_tests.cpp  resolver_tests.cpp
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
